--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -45,10 +45,8 @@
       "padded-blocks": ["warn", "never"],
       "react/prop-types": "off",
       "react/jsx-no-bind": "off",
-      "semi": ["warn", "always"],
       "space-before-blocks": ["warn", "always"],
-      "space-before-function-paren": ["warn", "never"],
-      "space-in-parens": ["warn", "never"]
+      "space-before-function-paren": ["warn", "never"]
     }
   }
   
