--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -39,11 +39,10 @@
       "no-empty": "off",
       "no-multi-spaces": "warn",
       "no-redeclare": "off",
-      "no-restricted-globals": ["warn", "Promise"],
       "no-undef": "error",
       "no-unused-vars": ["warn", {"args": "none"}],
       "react/prop-types": "off",
-      "react/jsx-no-bind": "off",
+      "react/jsx-no-bind": "off"
     }
   }
   
